@@ -69,6 +69,10 @@ public:
     bool getDblParam(OsiDblParam key, double& value) const;
     // Get a string parameter
     bool getStrParam(OsiStrParam key, std::string& value) const;
+    // Set mipstart option (pass column solution to CPLEX before MIP start)
+    void setMipStart(bool value) { domipstart = value; }
+    // Get mipstart option value
+    bool getMipStart() const { return domipstart; }
   //@}
 
   //---------------------------------------------------------------------------
@@ -874,6 +878,9 @@ private:
   
   /// Stores whether CPLEX' prob type is currently set to MIP
   mutable bool    probtypemip_;
+
+  /// Whether to pass a column solution to CPLEX before starting MIP solve (copymipstart)
+  bool            domipstart;
 
   //@}
 };
